--- a/src/Home.css
+++ b/src/Home.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 header {
@@ -21,30 +20,30 @@ header {
   padding: 0.5rem 0 0.5rem 0;
   color: #fff;
   font-family: "Inter", sans-serif;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
+  text-align: center;
 }
 
 .user-text {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #ff4500;
   font-family: "Inter", sans-serif;
   margin: 1rem 0 0 0;
-  opacity: 0.9;
 }
 
 .hero-text {
   font-size: 1rem;
   color: #fff;
   font-family: "Inter", sans-serif;
-  opacity: 0.9;
   margin: 1rem 0 1rem 0;
 }
 
-.button-group {
+.button-group-1 {
   display: flex;
   padding-top: 1rem;
   gap: 1rem;
-  justify-content: left;
+  justify-content: center;
+  align-items: center;
 }
 
 .login-btn,
@@ -57,26 +56,27 @@ header {
 }
 
 .login-btn {
-  background: #030303;
-  border-color: #b5b5b55d;
-  border-width: 1px;
-  border-style: solid;
+  background: none;
   color: #fff;
 }
 
 .signup-btn {
-  background: rgba(255, 69, 0, 0.4);
-  border-color: rgba(255, 69, 0, 0.4);
-  border-width: 1px;
-  border-style: solid;
+  background: #b43203;
+  transition: background 0.2s ease;
   color: #fff;
 }
 
+.signup-btn:hover {
+  background: #da3c01;
+}
+
 footer {
-  margin-top: 2rem;
+  margin-top: auto;
+  padding-top: 1rem;
   color: #888;
   font-size: 0.9rem;
   font-family: "Inter", sans-serif;
+  bottom: 0;
 }
 
 .home-root {
@@ -86,8 +86,6 @@ footer {
 }
 
 .home-slide {
-  transition: transform 0.5s cubic-bezier(0.77, 0, 0.18, 1);
-  will-change: transform;
   position: relative;
   z-index: 1;
 }
@@ -102,30 +100,30 @@ footer {
   pointer-events: none; /* So it doesn't block clicks */
 }
 
-.home-slide.slide-up {
-  transform: translateY(-100vh);
-}
-
-/* Shared styles for SignUp and Login slides */
-.signup-slide,
-.login-slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100vh);
-  transition: transform 0.5s cubic-bezier(0.77, 0, 0.18, 1);
-  will-change: transform;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.fade-modal {
+  opacity: 0;
   pointer-events: none;
+  transition: opacity 0.3s;
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
 }
 
-.signup-slide.slide-in,
-.login-slide.slide-in {
-  transform: translateY(0);
+.fade-modal.visible {
+  opacity: 1;
   pointer-events: auto;
+}
+
+.main-fade {
+  transition: opacity 0.3s;
+}
+
+.main-fade.faded {
+  opacity: 0.2;
+  pointer-events: none;
+  user-select: none;
+  filter: blur(10px);
 }
