--- a/src/SignUpAndLogin.css
+++ b/src/SignUpAndLogin.css
@@ -5,7 +5,7 @@ body {
   background-color: #030303;
 }
 
-.button-group {
+.button-group-2 {
   display: flex;
   gap: 1rem;
   justify-content: left;
@@ -48,10 +48,9 @@ body {
 
 .signup-submit-btn {
   font-family: "Inter", sans-serif;
-  background: rgba(255, 69, 0, 0.4);
-  border-color: rgba(255, 69, 0, 0.4);
-  border-width: 1px;
-  border-style: solid;
+  background: #b43203;
+  transition: background 0.2s ease;
+  border: none;
   color: #fff;
   border-radius: 100px;
   padding: 0.75rem 2rem;
@@ -60,24 +59,18 @@ body {
   font-size: 0.8em;
 }
 
+.signup-submit-btn:hover {
+  background: #da3c01;
+}
+
 .signup-close-btn {
   font-family: "Inter", sans-serif;
-  background: #030303;
-  border-color: #b5b5b55d;
-  border-width: 1px;
-  border-style: solid;
+  background: none;
+  border: none;
   padding: 0.75rem 2rem;
   border-radius: 100px;
   margin-top: 0.5rem;
   color: #fff;
   cursor: pointer;
   font-size: 0.8rem;
-}
-
-footer {
-  margin-top: 2rem;
-  color: #888;
-  font-size: 0.9rem;
-  font-family: "Inter", sans-serif;
-  text-align: center;
 }
