--- a/src/SignUpAndLogin.css
+++ b/src/SignUpAndLogin.css
@@ -74,3 +74,10 @@ body {
   cursor: pointer;
   font-size: 0.8rem;
 }
+
+.go-to-dashboard {
+  font-size: 0.9rem;
+  color: #b5b5b5;
+  margin-top: 0.5rem;
+  margin-bottom: 0rem;
+}
