--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,7 @@
+* {
+	-webkit-tap-highlight-color: transparent;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -9,10 +13,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
 
 header {
-	margin-top: 3rem;
+	margin-top: -3rem;
 	text-align: left;
 }
 
